--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,7 +52,9 @@ footer {
 /* Ícones do footer */
 footer i {
   color: #00adb5;
-  transition: transform 0.3s, color 0.3s;
+  transition:
+    transform 0.3s,
+    color 0.3s;
 }
 
 footer i:hover {
@@ -67,7 +69,9 @@ footer i:hover {
   border-radius: 10px;
   color: #f8fafc;
   box-shadow: 0 4px 10px rgba(0, 173, 181, 0.2);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .card:hover {
@@ -105,4 +109,18 @@ body {
 
 header {
   margin-top: 80px;
+}
+
+.content-wrapper {
+  max-width: 1280px; /* limite máximo */
+  width: 100%;
+}
+
+.carousel-wrapper {
+  max-width: 1184px;
+  width: 100%;
+}
+
+.carousel-inner {
+  min-height: 150px;
 }
